# verdure

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  verdure  verdure-autotools  verdure-autotools-bootstrap  verdure-configure-make  verdure-cpanm  verdure-git
verdure/: __init__.py  __main__.py
verdure/helpers/: autotools-bootstrap.py  autotools.py  autotools_bootstrap.py  configure-make.py  configure_make.py  cpanm.py  git.py  pip.py  tarball.py
